# projectfarm

./: .gitignore  CMakeLists.txt  README.md  build.py  generate_ios_projects.py  libraries.json
src/: CMakeLists.txt  version.h.in
src/application_main/: CMakeLists.txt  main.cpp
src/client_main/: CMakeLists.txt  Info.plist  main.cpp
src/client_main/engine/: CMakeLists.txt  action.cpp  action.h  action_input_source.cpp  action_input_source.h  action_manager.cpp  action_manager.h  action_types.h  actionable_entity.cpp  actionable_entity.h  client_config.cpp  client_config.h  consume_debug_information.h  consume_game.h  consume_mouse_input.h  debug_information.cpp  debug_information.h  device_capabilities.cpp  device_capabilities.h  game.cpp  game.h  keyboard_input.cpp  keyboard_input.h  mouse_input.cpp  mouse_input.h  platform.cpp  platform.h  platform_types.h  player.h  system.cpp  system.h  system_arguments.cpp  system_arguments.h
src/client_main/engine/action_input_sources/: CMakeLists.txt  action_input_source_keyboard.cpp  action_input_source_keyboard.h  key_mapping.cpp  key_mapping.h
src/client_main/engine/entities/: CMakeLists.txt  character.cpp  character.h  character_appearance_library.cpp  character_appearance_library.h  character_appearance_manager.cpp  character_appearance_manager.h  entity.cpp  entity.h  world_entity.cpp  world_entity.h
src/client_main/engine/scripting/: CMakeLists.txt  client_script_factory.cpp  client_script_factory.h  keyboard_input_script_object.cpp  keyboard_input_script_object.h  scene_script_object.cpp  scene_script_object.h  ui_base_control_script_object.cpp  ui_base_control_script_object.h  ui_control_script.cpp  ui_control_script.h  ui_script_object.cpp  ui_script_object.h
src/client_main/engine/world/: CMakeLists.txt  island.cpp  island.h  plot.cpp  (+5 more)
src/client_main/graphics/: CMakeLists.txt  SDL_freeable_surface.cpp  SDL_freeable_surface.h  camera.cpp  camera.h  consume_font_manager.h  consume_graphics.h  consume_render_manager.h  consume_tile_set_pool.h  font.cpp  font.h  font_manager.cpp  font_manager.h  font_styles.h  graphics.cpp  graphics.h  graphics_dependencies.cpp  graphics_dependencies.h  material.cpp  material.h  material_render_details.h  material_types.h  opengl_errors.cpp  opengl_errors.h  render_layer.cpp  render_layer.h  render_manager.cpp  render_manager.h  render_origin_points.cpp  render_origin_points.h  renderable.cpp  renderable.h  screen_resolution.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  shader_types.h  shape_mesh.cpp  shape_mesh.h  (+20 more)
src/client_main/network_client/: CMakeLists.txt  consume_network_client.h  network_client.cpp  network_client.h  network_client_worker.cpp  network_client_worker.h
src/client_main/scenes/: CMakeLists.txt  consume_scene.h  consume_scene_manager.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_types.h
src/server_main/: CMakeLists.txt  Info.plist  Info.plist.in  main.cpp
src/server_main/engine/: CMakeLists.txt  player.cpp  player.h  player_load_details.cpp  player_load_details.h
src/server_main/server/: CMakeLists.txt  client.cpp  client.h  client_connection_manager.cpp  client_connection_manager.h  client_connection_manager_worker.cpp  client_connection_manager_worker.h  consume_server.h  platform.cpp  platform.h  server.cpp  server.h  server_config.cpp  server_config.h  system_arguments.cpp  system_arguments.h
src/shared_library/: CMakeLists.txt  Info.plist  Info.plist.in
src/shared_library/api/: CMakeLists.txt
src/shared_library/concurrency/: CMakeLists.txt  channel.cpp  channel.h  state.cpp  state.h
src/shared_library/crypto/: CMakeLists.txt  consume_crypto_provider.h  crypto_provider.cpp  crypto_provider.h
src/shared_library/css/: CMakeLists.txt  css.cpp  css.h  css_attribute.cpp  css_attribute.h  css_class.cpp  css_class.h  css_document.cpp  css_document.h  css_selector.cpp  css_selector.h  css_selector_types.h  tokenizer.cpp  tokenizer.h
src/shared_library/data/: CMakeLists.txt  consume_data_provider.h  data_provider.cpp  data_provider.h  data_provider_locations.h
src/shared_library/entities/: CMakeLists.txt  character_appearance_details.cpp  character_appearance_details.h  character_behaviour_state_values.h  character_behaviour_states.h  character_state_values.cpp  character_state_values.h  character_states.cpp  character_states.h  entity_types.h
src/shared_library/game/: CMakeLists.txt  concurrency_keys.cpp  concurrency_keys.h  engine.cpp  engine.h  game.cpp  game.h
src/shared_library/logging/: CMakeLists.txt  consume_logger.h  logger.cpp  logger.h
src/shared_library/markdown/: CMakeLists.txt  markdown.cpp  markdown.h  text_parts.h
src/shared_library/math/: CMakeLists.txt  consume_random_engine.h  hex.cpp  hex.h  lerper.h  random_engine.h  vector2d.h
src/shared_library/networking/: CMakeLists.txt  consume_packet_sender.h  networking.cpp  networking.h  packet.cpp  packet.h  packet_factory.cpp  packet_factory.h  packet_receiver.cpp  packet_receiver.h  packet_sender.cpp  packet_sender.h  packet_sender_worker.cpp  packet_sender_worker.h  packet_types.h  udp_packet_base.h
src/shared_library/persistence/: CMakeLists.txt  database.cpp  database.h  statement.cpp  statement.h
src/shared_library/platform/: CMakeLists.txt  platform_id.h
src/shared_library/scripting/: CMakeLists.txt  consume_script_system.h  function_parameter.cpp  function_parameter.h  function_parameter_types.h  function_types.h  gc_persistent.cpp  gc_persistent.h  include_script.h  script.cpp  script.h  script_factory.h  script_system.cpp  script_system.h  script_types.h
src/shared_library/state/: CMakeLists.txt  state_item.cpp  state_item.h  state_machine.cpp  state_machine.h
src/shared_library/tests/: CMakeLists.txt  Info.plist  main.cpp  test_util.cpp  test_util.h
src/shared_library/time/: CMakeLists.txt  clock.cpp  clock.h  consume_timer.h  stopwatch.cpp  stopwatch.h  timer.cpp  timer.h
src/shared_library/utils/: CMakeLists.txt  memory.cpp  memory.h  sdl_util.cpp  sdl_util.h  stream.cpp  stream.h  strings.cpp  strings.h  util.h
(+244 files in other folders)
